Add regex option

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <input type="text" id="inputText" placeholder="Vstupní text" spellcheck="false" onclick="this.select()">
         <br>
-        <input type="text" id="replaceText" placeholder="Text k nahrazení" spellcheck="false" onclick="this.select()">
+        <input type="text" id="replaceText" placeholder="Text k nahrazení (nebo regularní výraz)" spellcheck="false" onclick="this.select()">
         <br>
         <input type="text" id="replacementText" placeholder="Nahrazující text" spellcheck="false"
             onclick="this.select()">
